[package]
name = "rdma-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
rdma-sys = "0.1.0"
tracing = "0.1.0"
tracing-subscriber = "0.2" 
bincode = "1.3.3"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
shlex = "1.3.0"